# voxelizacion-de-mallas-triangulares

./: .gitignore  CMakeLists.txt  README.md
code/common/: mesh.cpp  octree.cpp  octree.h  timer.h
code/io/: mesh_loader.cpp  mesh_loader.h  voxel_export_octree_vtu.cpp  voxel_export_octree_vtu.h
code/parallel/: algorithm1_active_nodes_omp.cpp  algorithm2_sparse_octree_omp.cpp  algorithm3_voxelize_octree_omp.cpp  algorithm4_inside_outside_omp.cpp  main_omp.cpp  voxelizer_omp.cpp
code/sequential/: algorithm3_voxelize_octree.cpp  algorithm4_inside_outside.cpp  main_seq.cpp  voxelizer_sequential.cpp
data/output/: beast_64_sparse.vtu  cow_64_sparse.vtu  homer_64_sparse.vtu  lucy_64_sparse.vtu  xyzrgb_dragon_64_sparse.vtu
include/: geometry.h  mesh.h  morton.h  octree.h  voxelizer.h
include/common/: geometry.h  mesh.h  octree.h
include/io/: mesh_loader.h  voxel_export_points_ply.h  voxel_export_raw.h  voxel_export_surface_ply.h
include/sequential/: voxelizer_sequential.h
src/: geometry.cpp  main.cpp  mesh.cpp  morton.cpp  octree.cpp  voxelizer.cpp
src/common/: geometry.cpp  morton.cpp  octree.cpp
src/io/: mesh_loader.cpp  voxel_export_points_ply.cpp  voxel_export_raw.cpp  voxel_export_surface_ply.cpp
src/parallel/: algorithm3_voxelize_octree_omp.cpp  algorithm4_inside_outside_omp.cpp  main_omp.cpp  voxelizer_omp.cpp
src/sequential/: algorithm1_active_nodes.cpp  algorithm2_sparse_octree.cpp  algorithm3_voxelize_octree.cpp  algorithm4_inside_outside.cpp  main_seq.cpp  voxelizer_sequential.cpp
